objects/vlocity_cmt__FulfilmentRequestLine__c.object
<CustomObject>
    <description>A line item in the back end order. Refers to Specification (Product2) and, optionally, Asset</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action ordered for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                    <default>true</default>
                    <label>Add</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
        <description>This field is used when JSONAttribute V2 feature is turned on. It contains the attribute values of this line item encoded in a JSON format. Please refer to documentation for the format of the JSON.</description>
        <inlineHelpText>This field is used when JSONAttribute V2 feature is turned on. It contains the attribute values of this line item encoded in a JSON format. Please refer to documentation for the format of the JSON.</inlineHelpText>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributesMarkupData__c</fullName>
        <description>This is an auxiliary OM Standard field used in the runtime</description>
        <label>Attributes Markup Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the line item.</description>
        <inlineHelpText>BillingAccountId</inlineHelpText>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstVersionFRLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the first time this fulfilment request line was introduced in the various versions of the current inflight orders.</description>
        <label>First Fulfilment Request Line Version</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Fulfilment Request Line revisions</relationshipLabel>
        <relationshipName>LaterVersionFRLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fulfilment Request</description>
        <inlineHelpText>Fulfilment Request</inlineHelpText>
        <label>Fulfilment Request Id</label>
        <referenceTo>vlocity_cmt__FulfilmentRequest__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The fulfilment status of this line item. Populated and updated by order management processes for submitted orders.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>InventoryItemId</description>
        <inlineHelpText>InventoryItemId</inlineHelpText>
        <label>Inventory Item Id</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field showing that a migration process is applied or not for a specific fulfilment request line.</description>
        <inlineHelpText>This field showing that a migration process is applied or not for a specific fulfilment request line.</inlineHelpText>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrchestrationItemsInFinalState__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is orchestration items in final state</description>
        <label>Is Orchestration Items In Final State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPONRReached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an internal flag used in Pont-of-No-Return calculations</description>
        <label>Is PONR Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsReadyForActivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is FR Line item ready for activation</description>
        <label>Is Ready For Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Fulfilment Request Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>LineNumber</description>
        <inlineHelpText>LineNumber</inlineHelpText>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MainOrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the main fulfilment request line item.</description>
        <label>Main Fulfilment Request Line Id</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Main Fulfilment Request Line Item</relationshipLabel>
        <relationshipName>MainOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <inlineHelpText>Product2</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PushEventData__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <description>The list of Push Event Orchestration Items related to the Fulfilment Request Line Item</description>
        <label>Push Event Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <inlineHelpText>ServiceAccountId</inlineHelpText>
        <label>Service Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines (ServiceAccountId)</relationshipLabel>
        <relationshipName>FulfillmentRequestLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action ordered for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <inlineHelpText>Sub-Action</inlineHelpText>
        <label>Sub-Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move-Add</fullName>
                </value>
                <value>
                    <fullName>Move-Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupersededFRLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Fulfilment Request Line on Superseded Order that this Fulfilment Request Line record overrides.</description>
        <label>Superseded FRLine</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Superseding FRLine</relationshipLabel>
        <relationshipName>SupersedingFRLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupplementalAction__c</fullName>
        <description>The action that is requested with respect to the action requested in superseded FRLine.</description>
        <label>Supplemental Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfilment Request Line</label>
    <nameField>
        <displayFormat>FRL{0000000}</displayFormat>
        <label>Fulfilment Request Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Request Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>